# slaby-scripts

./: Makefile  meson.build  meson.options  qqemu  stableids  stableup  susegen  sussh
.github/workflows/: obs_push.yaml
.obs/: workflows.yml
data/: 01dvb  50-nerd-font.conf  bash_completion  bash_profile  bashrc  fstrim-on-shutdown.service  gitconfig  meson-clang-toolchain.ini  nvr@.service  renames-3.12  serial-getty-term.conf  skeleton.CMakeLists.txt  skeleton.c  skeleton.cpp  skeleton.meson.build  sqliterc  ssh_known_hosts  tigrc  vimrc
data/neovim/ftplugin/: gitrebase.lua
data/neovim/lua/: .luarc.json  slaby.lua
data/neovim/lua/sl_config/: build.lua  file_types.lua  kernel.lua  keymap.lua  lazy.lua  nohls.lua  restore_cursor.lua  skeletons.lua
data/neovim/lua/sl_plugins/: autocompletion.lua  basic.lua  copilot.lua  doxygen.lua  lsp.lua  lualine.lua  telescope.lua  treesitter.lua
data/skeleton/: CMakeLists.txt  meson.build  meson.options  skeleton.c  skeleton.cpp
data/sysctl/: 60-my-kptr.conf  60-my-watermark.conf
perl/: StableHelper.pm
python/: meson.build
python/slaby_scripts/: sl_helper.py
unit/: nvr@.service
